Fix rendering on small screens

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -25,6 +25,22 @@ h1 {
   margin-bottom: 0.5rem;
 }
 
+h1.title {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  /* push elements to sides of container */
+  justify-content: space-around;
+  /* align elements to center of container */
+  align-items: center;
+}
+
+@media (max-width: 35em) {
+  h1.title {
+    flex-direction: column;
+  }
+}
+
 h2 {
   color: #e0e0e0;
   margin-top: 2rem;
@@ -94,6 +110,11 @@ cite {
   color: #0F9D58;
 }
 
+.nobreak {
+  white-space: nowrap;
+  font-size: inherit;
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -151,8 +172,8 @@ cite {
 @media (max-width: 718px) {
   .calendly-inline-widget iframe {
     border-radius: 0.5em;
-    width: calc(100% - 2rem);
-    margin-left: 1rem;
+    width: 95%;
+    margin-left: 2.5%;
     background-color: white;
   }
 }
